--- a/MCS.html
+++ b/MCS.html
@@ -132,7 +132,7 @@ body {
     </nav>
 
     <div class="d-flex flex-row justify-content-end">
-        <a href="open.html"><button class="btn btn-primary mr-3">Back</button></a>
+        <a href="index.html"><button class="btn btn-primary mr-3">Back</button></a>
     </div>
 
     <section class="page-section" id="poverty">
@@ -257,4 +257,5 @@ body {
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+
 </html>
